Fix spacing around social media section.

--- a/css/style.less
+++ b/css/style.less
@@ -58,6 +58,11 @@ div.social-media {
     text-align: center;
 }
 
+.social-media > h2 {
+    margin-bottom: 15px;
+    margin-top: 50px;
+}
+
 .container-narrow {
     margin: 0 auto;
     .box-shadow(0,0,30px,#000);
